# yolo-hud-overlay

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: yolo_overlay_video.py
src/yolo_hud_overlay/: cli.py  hud.py  render.py  theme.py  tracker.py
tests/: test_cli.py  test_editorial.py  test_theme.py  test_tracker.py  test_tracking_render.py
themes/: minimal.json  neon.json  recon.json  surveil.json  trace.json
