[project]
name = "yolo-hud-overlay"
version = "0.1.0"
description = "Themeable YOLO detection HUD overlay for videos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kan Ninomiya" }]
dependencies = [
  "ultralytics>=8.3.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26",
]

[project.scripts]
yolo-hud-overlay = "yolo_hud_overlay.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolo_hud_overlay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
